# Construct-Addon-SDK

./: .gitignore  README.md
behavior-sdk/: aces.schema.json  behavior.addon.schema.json
behavior-sdk/basic-bullet/: aces.json  addon.json  behavior.js  behavior.ts
behavior-sdk/sample-behavior/: aces.json  addon.json  instance.js  instance.ts  type.js
behavior-sdk/v1/: README.md  aces.schema.json  behavior.addon.schema.json  behavior.lang.schema.json
behavior-sdk/v2/: aces.schema.json  behavior.addon.schema.json  behavior.lang.schema.json
effect-sdk/: effect.addon.schema.json  effect.lang.schema.json
effect-sdk/sample-tint/: addon.json  effect.fx  effect.wgsl
effect-sdk/sample-webgl2/: addon.json  effect.fx  effect.webgl2.fx  effect.wgsl
plugin-sdk/: plugin.addon.schema.json  plugin.lang.schema.json
plugin-sdk/customImporterPlugin/: addon.json  plugin.js  type.ts
plugin-sdk/domElementPlugin/: aces.json  addon.json  instance.js  instance.ts  plugin.js  plugin.ts  type.js  type.ts
plugin-sdk/domMessagingPlugin/: aces.json  addon.json  instance.js  plugin.js  plugin.ts  tsconfig.json  type.ts
plugin-sdk/drawingPlugin/: addon.json  instance.js  instance.ts  plugin.js  plugin.ts
plugin-sdk/editorTextPlugin/: aces.json  addon.json  plugin.ts  type.js  type.ts
plugin-sdk/wrapperExtensionPlugin/extension/: CMakeLists.txt  IApplication.h  IExtension.h  Utils.cpp  Utils.h  WrapperExtension.cpp  WrapperExtension.h  WrapperExtension.vcxproj.filters  framework.h  pch.h
theme-sdk/: theme.addon.schema.json  theme.lang.schema.json
(+272 files in other folders)
